   repository/archive into the resulting Borg command-line, make repository and archive environment
   variables available for explicit use in your commands. See the documentation for more
   information: https://torsion.org/borgmatic/docs/how-to/run-arbitrary-borg-commands/
 * #719: Fix an error when running "borg key export" through borgmatic.
 * When merging two configuration files, error gracefully if the two files do not adhere to the same
   format.

1.7.15
 * #326: Add configuration options and command-line flags for backing up a database from one
   location while restoring it somewhere else.
 * #399: Add a documentation troubleshooting note for MySQL/MariaDB authentication errors.
 * #529: Remove upgrade-borgmatic-config command for upgrading borgmatic 1.1.0 INI-style
   configuration.
 * #529: Deprecate generate-borgmatic-config in favor of new "config generate" action.
 * #529: Deprecate validate-borgmatic-config in favor of new "config validate" action.
 * #697, #712, #716: Extract borgmatic configuration from backup via new "config bootstrap"
   action—even when borgmatic has no configuration yet!
 * #669: Add sample systemd user service for running borgmatic as a non-root user.
 * #711, #713: Fix an error when "data" check time files are accessed without getting upgraded
   first.

1.7.14
 * #484: Add a new verbosity level (-2) to disable output entirely (for console, syslog, log file,
   or monitoring), so not even errors are shown.
 * #688: Tweak archive check probing logic to use the newest timestamp found when multiple exist.
 * #659: Add Borg 2 date-based matching flags to various actions for archive selection.
 * #703: Fix an error when loading the configuration schema on Fedora Linux.
 * #704: Fix "check" action error when repository and archive checks are configured but the archive
   check gets skipped due to the configured frequency.
 * #706: Fix "--archive latest" on "list" and "info" actions that only worked on the first of